Fixed climate button

--- a/btn_card_templates/temperature.yaml
+++ b/btn_card_templates/temperature.yaml
@@ -174,10 +174,10 @@
 
   #################################################
   #                                               #
-  #                    CLIMATE                    #
+  #                     TEMP                      #
   #                                               #
   #################################################
-  climate:
+  temp:
     show_state: false
     show_icon: true
     template:
