--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -351,6 +351,36 @@
 
   #################################################
   #                                               #
+  #                  CLIMATE                      #
+  #                                               #
+  #################################################
+
+  climate:
+    custom_fields:
+      circle: >
+        [[[
+          const input = variables.circle_input == null ? ' ' : `${parseInt(variables.circle_input)}<tspan font-size="10">°C</tspan>`;
+          const stroke_color = variables.state === 'cool' || variables.state === 'fan_only' ? '#b2b2b2' : 'none';
+          const fill_color = variables.state === 'off' ? 'rgba(255,255,255,0.04)' : 'none';
+          return `
+            <svg viewBox="0 0 50 50">
+              <circle cx="25" cy="25" r="20.5" stroke="${stroke_color}" stroke-width="1.5" fill="${fill_color}" />
+              <text x="50%" y="54%" fill="#8d8e90" font-size="14" text-anchor="middle" alignment-baseline="middle" dominant-baseline="middle">${input}</text>
+            </svg>
+          `;
+        ]]]
+    styles:
+      custom_fields:
+        circle:
+          - display: initial
+          - width: 90%
+          - letter-spacing: 0.03vw
+          - margin: -6% -6% 0 0
+          - justify-self: end
+          - opacity: 1
+
+  #################################################
+  #                                               #
   #                    UPDATER                    #
   #                                               #
   #################################################
