Add plex docker and version info

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -167,6 +167,7 @@ monitor_docker:
       - nzbget
       - youtubedl
       - nzbhydra
+      - plex
     rename:
       homeassistant: HomeAssistant
       nzbget: Nzbget
