--- a/popup/sidebar_information.yaml
+++ b/popup/sidebar_information.yaml
@@ -90,38 +90,20 @@ browser_mod:
                 --paper-item-icon-color: {{ '#9e9e9e' if is_state(config.entity, 'healthy') else '#9c2525' }};
                 }
 
-          - type: custom:bar-card
-            width: 55%
-            height: 2em
-            decimal: 0
-            unit_of_measurement: '%'
-            positions: &bar_card_positions
-              icon: outside
-              indicator: 'off'
-              name: outside
-            severity: &bar_card_severity
-              - color: '#303435'
-                from: 0
-                to: 69
-              - color: '#6d2525'
-                from: 70
-                to: 100
-            entity_row: true
-            entities:
-
-              - entity: sensor.docker_homeassistant_1cpu
+          - type: custom:hui-horizontal-stack-card
+            cards:
+              - type: custom:button-card
+                name: Restart HA
+                icon: mdi:reload
                 tap_action:
-                  action: call-service
-                  service: homeassistant.update_entity
-                  service_data:
-                    entity_id: sensor.docker_homeassistant_1cpu
-
-              - entity: sensor.docker_homeassistant_memory_percent
-                tap_action:
-                  action: call-service
-                  service: homeassistant.update_entity
-                  service_data:
-                    entity_id: sensor.docker_homeassistant_memory_percent
+                  services: |
+                    [[[
+                      hass.callService('browser_mod', 'toast', {
+                        message: 'Restart Home Assistant...'
+                      });
+                      hass.callService('homeassistant', 'restart');
+                    ]]]
+                template: icon_name
 
       #################################################
       #                                               #
@@ -182,26 +164,23 @@ browser_mod:
           - type: custom:hui-horizontal-stack-card
             cards:
               - type: custom:button-card
-                name: Home Assistant
-                icon: mdi:reload
-                tap_action:
-                  services: |
-                    [[[
-                      hass.callService('browser_mod', 'toast', {
-                        message: 'Restart Home Assistant...'
-                      });
-                      hass.callService('homeassistant', 'restart');
-                    ]]]
-                template: icon_name
-
-              - type: custom:button-card
-                name: Docker VPN
+                name: Restart VPN
                 icon: mdi:reload
                 tap_action:
                   action: call-service
                   service: script.turn_on
                   service_data:
                     entity_id: script.docker_vpn_restart
+                template: icon_name
+
+              - type: custom:button-card
+                name: Restart Plex
+                icon: mdi:reload
+                tap_action:
+                  action: call-service
+                  service: monitor_docker.restart
+                  service_data:
+                    name: plex
                 template: icon_name
 
       #################################################
@@ -264,8 +243,17 @@ browser_mod:
             height: 2em
             decimal: 0
             unit_of_measurement: '%'
-            positions: *bar_card_positions
-            severity: *bar_card_severity
+            positions: &bar_card_positions
+              icon: outside
+              indicator: 'off'
+              name: outside
+            severity: &bar_card_severity
+              - color: '#303435'
+                from: 0
+                to: 69
+              - color: '#6d2525'
+                from: 70
+                to: 100
             entity_row: true
             entities:
 
