--- a/popup/master_fan.yaml
+++ b/popup/master_fan.yaml
@@ -1,25 +1,19 @@
 action: fire-dom-event
 browser_mod:
   command: popup
-  title: Dyson Fan
+  title: Master Bedroom Fan
   card:
     type: vertical-stack
     cards:
       - type: custom:more-info-card
-        entity: fan.pure_cool_link
+        entity: fan.master_bedroom
         title: ' '
-
-      - type: entities
-        state_color: true
-        entities:
-          - entity: sensor.pure_cool_link_filter_life
-          - entity: sensor.pure_cool_link_humidity
 
       - type: custom:mini-graph-card
         entities:
           - color: '#399b56'
-            entity: sensor.pure_cool_link_temperature
-        line_width: 8
+            entity: sensor.master_bedroom_temperature
+        line_width: 4
         hour24: true
         group: true
         align_icon: left
