--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -83,6 +83,15 @@ views:
 
           - type: conditional
             conditions:
+              - entity: timer.tablet_oli_time
+                state: 'active'
+            card:
+              type: custom:button-card
+              entity: timer.tablet_oli_time
+              template: tablet
+
+          - type: conditional
+            conditions:
               - entity: sensor.template_oakland_alert_1
                 state: 'on'
             card:
@@ -230,6 +239,17 @@ views:
           - type: custom:button-card
             entity: switch.oli_tablet_filter
             name: Filter Tab
+            hold_action:
+              services: >
+                [[[
+                  hass.callService('browser_mod', 'toast', {
+                    message: 'Starting Oli Tablet Timer...'
+                  });
+
+                  hass.callService('timer', 'start', {
+                    entity_id: 'timer.tablet_oli_time'
+                  });
+                ]]]
             template:
               - base
               - icon_toggle
