--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -927,6 +927,34 @@
 
   #################################################
   #                                               #
+  #                    TABLET                     #
+  #                                               #
+  #################################################
+
+  tablet:
+    show_icon: false
+    show_name: false
+    show_state: true
+    tap_action:
+      services: >
+        [[[
+          hass.callService('timer', 'cancel', {
+            entity_id: entity.entity_id
+          });
+        ]]]
+    styles:
+      card:
+        - background: '#202a2f30'
+        - border-radius: 0.7vw
+        - border: '0.2vw solid #292c2e'
+      state:
+        - font-size: 2.7vw
+        - font-family: SF Mono
+        - opacity: 0.65
+        - padding: 0.55vw 1.2vw 0.5vw 1.2vw
+
+  #################################################
+  #                                               #
   #                 POPUP BUTTONS                 #
   #                                               #
   #################################################
