Added exclude youtube channels and fixed timer name

--- a/include/timers.yaml
+++ b/include/timers.yaml
@@ -6,6 +6,6 @@ timer:
     duration: 00:06:00
     icon: mdi:stop
 
-  oli_tablet_filter:
+  tablet_oli_time:
     duration: 00:30:00
     icon: mdi:tablet
