--- a/include/themes.yaml
+++ b/include/themes.yaml
@@ -204,7 +204,8 @@ frontend:
 
           #conditional missing entities
           "$hui-button-card:nth-last-child(2)$": |
-            {% if states('sensor.template_unavailable_entities') | int > 0 and not is_state('timer.startup_missing_delay', 'active') %}
+            {% if (states('sensor.template_unavailable_entities') | int > 0 and not is_state('timer.startup_missing_delay', 'active')) 
+                   or is_state('sensor.template_oakland_alert_1', 'on') %}
 
               ha-card, ha-icon {
                 color: rgb(205, 1, 1) !important;
