More error support for plex updates

--- a/templates/updates.yaml
+++ b/templates/updates.yaml
@@ -8,7 +8,11 @@
         plex: >
           {% set installed = states('sensor.plex_version_installed') %}
           {% set latest = states('sensor.plex_server_release_notes') %}
+          {% set update_available = state_attr('sensor.plex_server_release_notes', 'update_available') %}
           {% set url = 'https://github.com/dhleong/playactor/releases/latest' %}
-          {% if installed != latest and installed != 'unavailable' and latest != 'unavailable' %}
-            <b><a href="#" onclick="window.open('{{ url }}');">plex</a></b> {{ installed + ' \u279e ' + latest }}
+
+          {% if update_available and installed != 'unavailable' and latest != 'unavailable' %}
+            {% if installed != latest and update_available %}
+              <b><a href="#" onclick="window.open('{{ url }}');">plex</a></b> {{ installed + ' \u279e ' + latest }}
+            {% endif %}
           {% endif %}
